# AMD-Chipset-Drivers

./: .flake8  .gitignore  LICENSE  README.md  clean.py  clean_full.py  generate_changelog.py  pyproject.toml  scrape.py  scrape_config.toml
.github/workflows/: scrape.yml
configs/: generated_changelog.md  link.txt
src/amd_chipset_driver_scraper/: __init__.py
src/amd_chipset_driver_scraper/command/: __init__.py  check_for_new_driver.py  download.py
src/amd_chipset_driver_scraper/util/: __init__.py  config.py  driver_version.py  parsing.py
